# portfolio

./: .gitignore  Procfile  README.md  build.sh  deploy.sh  keys.txt  manage.py  render.yaml  requirements.txt  ruff.toml  vercel.json
.github/: README.md  wake_db.yml
.github/workflows/: wake_db.yml
PORTFOLIO/: asgi.py  build.sh  deploy.sh  manage.py  pyproject.toml  requirements.txt  urls.py  vercel.json  wsgi.py
PORTFOLIO/CORE/: asgi.py  urls.py  wsgi.py
PORTFOLIO/CORE/settings/: base.py  deploy.py
PORTFOLIO/home/: context.py  views.py
PORTFOLIO/send/: models.py  urls.py  views.py
PORTFOLIO/settings/: base.py  deploy.py
PORTFOLIO/static/home/css/: _header.scss  style.css  style.css.map  style.scss
PORTFOLIO/static/home/js/: script.js
PORTFOLIO/templates/errors/: 404.html
PORTFOLIO/templates/home/: index.html
home/: context.py  urls.py  views.py
home/contexts/: about_section.py  projects.py  skills.py
send/: urls.py  views.py
static/home/css/: _constants.scss  _decos.scss  _header.scss  _medias.scss  _separators.scss  style.css  style.css.map  style.scss
static/home/js/: script.js
templates/errors/: 404.html
templates/home/: index.html
templates/shared/: base.html
