[project]
name = "portfolio"
version = "0.1.0"
description = "This project, as it seems to be, is my personal portfolio, where I show and lead you for both what I'm able to do and who I am, also showing my most relevants projects."
requires-python = ">=3.13"
dependencies = [
    "dj-database-url>=2.3.0",
    "django>=5.1.4",
    "gunicorn>=23.0.0",
    "psycopg2-binary>=2.9.10",
    "whitenoise>=6.8.2",
]

[dependency-groups]
dev = [
    "django-extensions",
    "ruff>=0.9.0",
]

[tool.ruff]
exclude = [".env", "migrations"]
fix = true

[tool.ruff.format]
quote-style = "single"
docstring-code-format = true

[tool.ruff.lint]
select = ["I", "E", "UP", "F"]
fixable = ["ALL"]

[tool.ruff.lint.isort]
case-sensitive = true
lines-after-imports = 2

[tool.ruff.lint.pycodestyle]
max-doc-length = 88
